# session-forge

./: .gitignore  AGENTS.md  LICENSE  README.md  STATUS.md  pyproject.toml
docs/: mcp-client-setup.md
specs/: analysis-prompts.md  concurrency.md  config.md  implementation-tasks.md  project-detection.md  proxy-design.md  schema.md  session-correlation.md  storage-layout.md
src/session_forge/: __init__.py  cli.py  config.py  default-config.yaml  paths.py  service_runtime.py
src/session_forge/analyzer/: __init__.py  client.py  prompts.py
src/session_forge/mcp_server/: __init__.py  server.py  sidecar.py  storage.py
src/session_forge/proxy/: __init__.py  app.py  forwarder.py  logger.py
tests/: conftest.py  test_ingest.py  test_mcp_service_tools.py  test_paths.py  test_proxy.py  test_service_runtime.py  test_sidecar.py  test_storage.py
